--- a/redirects.config
+++ b/redirects.config
@@ -14,7 +14,7 @@ files:
             rewrite ^/admissions/what-to-expect/?$ https://$host/addiction-treatment-new-jersey/what-to-expect/ permanent;
             rewrite ^/payment-options/?$ https://$host/addiction-treatment-new-jersey/payment-options/ permanent;
             rewrite ^/resource-center/?$ https://$host/addiction-resources-center/ permanent;
-            rewrite ^/blog/?$ https://$host/addiction-blog/ permanent;
+            rewrite ^/blog/$ https://$host/addiction-blog/ permanent;
             rewrite ^/about.html?$ https://$host/about/ permanent;
             rewrite ^/ceo.html?$ https://$host/about/ permanent;
             rewrite ^/change.html?$ https://$host/program-overview/ permanent;
@@ -66,3 +66,4 @@ files:
             #FACILITY-1735
             rewrite ^/benzodiazepines/limbitrol/?$ https://$host/benzodiazepines/ permanent;
             rewrite ^/benzodiazepines/zolpidem-ambien/?$ https://$host/prescription-drug-addiction-recovery/zolpidem-ambien/ permanent;
+            rewrite ^/addiction-blog/tag/$ https://$host/blog/tag/ permanent;
