Add redirects for FAC-3199

--- a/redirects.config
+++ b/redirects.config
@@ -34,3 +34,9 @@ files:
             #FACILITY-2705
             rewrite ^/blog/$ https://$host/addiction-blog/ permanent;
             rewrite ^/addiction-blog/tag/$ https://$host/blog/tag/ permanent;
+            #FACILITY-3199
+            rewrite ^/stop-drinking-alcohol/history-wine/?$ https://$host/stop-drinking-alcohol/history-liquor/ permanent;
+            rewrite ^/stop-drinking-alcohol/history-beer/?$ https://$host/stop-drinking-alcohol/history-liquor/ permanent;
+            rewrite ^/stop-drinking-alcohol/chronic-functioning-alcoholics/?$ https://$host/stop-drinking-alcohol/types-alcoholics/ permanent;
+            rewrite ^/stop-drinking-alcohol/wet-brain-alcoholic/?$ https://$host/stop-drinking-alcohol/wet-brain-wernicke-korsakoff/ permanent;
+            rewrite ^/stop-drinking-alcohol/cirrhosis-liver/?$ https://$host/stop-drinking-alcohol/long-term-health-damage/ permanent;
