Add redirects for FACILITY-3754

--- a/redirects.config
+++ b/redirects.config
@@ -40,3 +40,5 @@ files:
             rewrite ^/stop-drinking-alcohol/chronic-functioning-alcoholics/?$ https://$host/stop-drinking-alcohol/types-alcoholics/ permanent;
             rewrite ^/stop-drinking-alcohol/wet-brain-alcoholic/?$ https://$host/stop-drinking-alcohol/wet-brain-wernicke-korsakoff/ permanent;
             rewrite ^/stop-drinking-alcohol/cirrhosis-liver/?$ https://$host/stop-drinking-alcohol/long-term-health-damage/ permanent;
+            #FACILITY-3754
+            rewrite ^/contributor/?$ https://$host/contributors/ permanent;
