Add redirects for FACILITY-4202

--- a/redirects.config
+++ b/redirects.config
@@ -42,3 +42,11 @@ files:
             rewrite ^/stop-drinking-alcohol/cirrhosis-liver/?$ https://$host/stop-drinking-alcohol/long-term-health-damage/ permanent;
             #FACILITY-3754
             rewrite ^/contributor/?$ https://$host/contributors/ permanent;
+            #FACILITY-4202
+            rewrite ^/prescription-opiates/oxycontin-oxycodone/?$ https://$host/prescription-opiates/oxycodone/methods-of-use/ permanent;
+            rewrite ^/prescription-opiates/oxycontin/?$ https://$host/prescription-opiates/oxycodone/methods-of-use/ permanent;
+            rewrite ^/prescription-opiates/carfentanil/?$ https://$host/prescription-opiates/fentanyl/ permanent;
+            rewrite ^/cause-effect/most-addictive-dangerous-opiates/?$ https://$host/heroin-addiction-treatment/ permanent;
+            rewrite ^/prescription-opiates/opana-oxymorphone/?$ https://$host/prescription-opiates/ permanent;
+            rewrite ^/blog/new-jersey-expands-role-of-paramedics-for-opioid-victims/?$ https://$host/northeast-addiction-treatment-guide/narcan-naloxone/ permanent;
+            rewrite ^/blog/governor-christie-trump-declare-national-state-emergency-fight-opioid-crisis/?$ https://$host/northeast-addiction-treatment-guide/narcan-naloxone/ permanent;
