--- a/redirects.config
+++ b/redirects.config
@@ -50,3 +50,11 @@ files:
             rewrite ^/prescription-opiates/opana-oxymorphone/?$ https://$host/prescription-opiates/ permanent;
             rewrite ^/blog/new-jersey-expands-role-of-paramedics-for-opioid-victims/?$ https://$host/northeast-addiction-treatment-guide/narcan-naloxone/ permanent;
             rewrite ^/blog/governor-christie-trump-declare-national-state-emergency-fight-opioid-crisis/?$ https://$host/northeast-addiction-treatment-guide/narcan-naloxone/ permanent;
+            #FACILITY-4491
+            rewrite ^/blog/hydromorphone-viable-option-heroin-addiction-treatment/?$ https://$host/heroin-addiction-treatment/ permanent;
+            rewrite ^/blog/24k-heroin-seized-nj-drug-bust/?$ https://$host/heroin-addiction-treatment/ permanent;
+            rewrite ^/blog/heroin-packets-found-in-lunchbox/?$ https://$host/heroin-addiction-treatment/ permanent;
+            rewrite ^/blog/heroin-packets-nj-kindergarteners-lunchbox/?$ https://$host/heroin-addiction-treatment/ permanent;
+            rewrite ^/heroin-addiction-treatment/methadone-suboxone/?$ https://$host/heroin-addiction-treatment/methadone/ permanent;
+            rewrite ^/heroin-addiction-treatment/phases-withdrawal/?$ https://$host/heroin-addiction-treatment/methadone/ permanent;
+            rewrite ^/heroin-addiction-treatment/suboxone-subutex/?$ https://$host/heroin-addiction-treatment/methadone/ permanent;
