--- a/redirects.config
+++ b/redirects.config
@@ -63,3 +63,5 @@ files:
             rewrite ^/addiction-treatment-new-jersey/what-to-expect/families/after-rehab/?$ https://$host/addiction-treatment-new-jersey/admissions/families/after-rehab/ permanent;
             rewrite ^/addiction-treatment-new-jersey/what-to-expect/faq/?$ https://$host/addiction-treatment-new-jersey/admissions/faq/ permanent;
             rewrite ^/addiction-treatment-new-jersey/what-to-expect/patients/?$ https://$host/addiction-treatment-new-jersey/admissions/patients/ permanent;
+            #FACILITY-5074
+            rewrite ^/addiction-treatment/insurance-pay-rehab/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/ permanent;
