--- a/redirects.config
+++ b/redirects.config
@@ -10,7 +10,7 @@ files:
             rewrite ^/program-overview/therapy-types/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
             rewrite ^/program-overview/aftercare/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
             rewrite ^/facility/?$ https://$host/addiction-treatment-new-jersey/facility/ permanent;
-            rewrite ^/facility/features-amenities/?$ https://$host/addiction-treatment-new-jersey/features-amenities/ permanent;
+            rewrite ^/facility/features-amenities/?$ https://$host/addiction-treatment-new-jersey/facility/ permanent;
             rewrite ^/admissions/?$ https://$host/addiction-treatment-new-jersey/admissions/ permanent;
             rewrite ^/admissions/what-to-expect/?$ https://$host/addiction-treatment-new-jersey/admissions/ permanent;
             rewrite ^/payment-options/?$ https://$host/addiction-treatment-new-jersey/payment-options/ permanent;
@@ -65,3 +65,7 @@ files:
             rewrite ^/addiction-treatment-new-jersey/what-to-expect/patients/?$ https://$host/addiction-treatment-new-jersey/admissions/patients/ permanent;
             #FACILITY-5074
             rewrite ^/addiction-treatment/insurance-pay-rehab/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/ permanent;
+            #FACILITY-4933
+            rewrite ^/blog/fentanyl-replacing-heroin-leading-cause-drug-overdose-death-nj/?$ https://$host/prescription-opiates/fentanyl/ permanent;
+            rewrite ^/blog/fentanyl-strikes-nj-drug-overdose-deaths-triple-shore/?$ https://$host/prescription-opiates/fentanyl/ permanent;
+            rewrite ^/addiction-treatment-new-jersey/features-amenities/?$ https://$host/addiction-treatment-new-jersey/facility/ permanent;
