--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -63,3 +63,5 @@ rewrite ^/addiction-treatment/insurance-pay-rehab/?$ https://$host/addiction-tre
 rewrite ^/blog/fentanyl-replacing-heroin-leading-cause-drug-overdose-death-nj/?$ https://$host/prescription-opiates/fentanyl/ permanent;
 rewrite ^/blog/fentanyl-strikes-nj-drug-overdose-deaths-triple-shore/?$ https://$host/prescription-opiates/fentanyl/ permanent;
 rewrite ^/addiction-treatment-new-jersey/features-amenities/?$ https://$host/addiction-treatment-new-jersey/facility/ permanent;
+#FACILITY-5449
+rewrite ^/cause-effect/meth-use/?$ https://$host/meth-addiction-treatment/effects-of-use/ permanent;
