--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -65,3 +65,5 @@ rewrite ^/blog/fentanyl-strikes-nj-drug-overdose-deaths-triple-shore/?$ https://
 rewrite ^/addiction-treatment-new-jersey/features-amenities/?$ https://$host/addiction-treatment-new-jersey/facility/ permanent;
 #FACILITY-5449
 rewrite ^/cause-effect/meth-use/?$ https://$host/meth-addiction-treatment/effects-of-use/ permanent;
+#FACILITY-5452
+rewrite ^/blog/paying-addiction-treatment-need-know/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/ permanent;
