--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,23 @@ http {
 
         server_name sunrisehouse.com staging.sunrisehouse.com;
 
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header Content-Security-Policy "default-src *; font-src 'self' data: fonts.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *; object-src 'none'; base-uri 'self';";
+
+        # Media: images, icons, video, audio, HTC, 4 hours
+        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|webp|htc|woff|woff2)$ {
+            add_header Cache-Control "public, max-age=14400, must-revalidate";
+            root /var/app/current;
+        }
+
+        # CSS and Javascript, 4 hours
+        location /_next/static/ {
+            alias /var/app/current/.next/static/;
+            add_header Cache-Control "public, max-age=14400, must-revalidate";
+        }
+
         if ($http_x_forwarded_proto = "http") {
             return 301 https://$server_name$request_uri;
         }
