--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -67,3 +67,6 @@ rewrite ^/addiction-treatment-new-jersey/features-amenities/?$ https://$host/add
 rewrite ^/cause-effect/meth-use/?$ https://$host/meth-addiction-treatment/effects-of-use/ permanent;
 #FACILITY-5452
 rewrite ^/blog/paying-addiction-treatment-need-know/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/ permanent;
+#FACILITY-5261
+rewrite ^/home/?$ https://$host/ permanent;
+rewrite ^/search/?$ https://$host/addiction-resources-center/ permanent;
