--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -70,3 +70,5 @@ rewrite ^/blog/paying-addiction-treatment-need-know/?$ https://$host/addiction-t
 #FACILITY-5261
 rewrite ^/home/?$ https://$host/ permanent;
 rewrite ^/search/?$ https://$host/addiction-resources-center/ permanent;
+#FACILITY-5458
+rewrite ^/blog/nj-methamphetamine-abuse-spikes/?$ https://$host/meth-addiction-treatment/ permanent;
