--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -72,3 +72,5 @@ rewrite ^/home/?$ https://$host/ permanent;
 rewrite ^/search/?$ https://$host/addiction-resources-center/ permanent;
 #FACILITY-5458
 rewrite ^/blog/nj-methamphetamine-abuse-spikes/?$ https://$host/meth-addiction-treatment/ permanent;
+#FACILITY-5458
+rewrite ^/addiction-treatment/comparing-finance-options/?$ https://$host/addiction-treatment-new-jersey/payment-options/ permanent;
