--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -74,3 +74,5 @@ rewrite ^/search/?$ https://$host/addiction-resources-center/ permanent;
 rewrite ^/blog/nj-methamphetamine-abuse-spikes/?$ https://$host/meth-addiction-treatment/ permanent;
 #FACILITY-5458
 rewrite ^/addiction-treatment/comparing-finance-options/?$ https://$host/addiction-treatment-new-jersey/payment-options/ permanent;
+#FACILITY-7053
+rewrite ^/family-resources/how-to-help-family-members/?$ https://$host/family-resources/ permanent;
