--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -76,3 +76,20 @@ rewrite ^/blog/nj-methamphetamine-abuse-spikes/?$ https://$host/meth-addiction-t
 rewrite ^/addiction-treatment/comparing-finance-options/?$ https://$host/addiction-treatment-new-jersey/payment-options/ permanent;
 #FACILITY-7053
 rewrite ^/family-resources/how-to-help-family-members/?$ https://$host/family-resources/ permanent;
+#FACILITY-7290
+rewrite ^/site-map/?$ https://$host/sitemap_index.xml permanent;
+rewrite ^/frequently-asked-questions/aftercare/?$ https://$host/addiction-treatment-new-jersey/after-rehab/ permanent;
+rewrite ^/assessment-diagnose/intake-process/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
+rewrite ^/frequently-asked-questions/detox/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/medical-detox/ permanent;
+rewrite ^/frequently-asked-questions/treatment/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
+rewrite ^/outpatient-programs/iop/?$ https://$host/outpatient-programs/ permanent;
+rewrite ^/partial-hospitalization-program/?$ https://$host/outpatient-programs/ permanent;
+rewrite ^/residential-treatment-centers/basic-amenities-accommodations-expected/?$ https://$host/addiction-treatment-new-jersey/facility/ permanent;
+rewrite ^/residential-treatment-centers/certified-licensed/?$ https://$host/about/memberships-accreditation/ permanent;
+rewrite ^/residential-treatment-centers/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
+rewrite ^/residential-treatment-centers/length-stay/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
+rewrite ^/addiction-treatment-new-jersey/payment-options/insurance/ghi-emblem/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/emblem-health/ permanent;
+rewrite ^/programs/outpatient/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/ permanent;
+rewrite ^/addiction-treatment-new-jersey/payment-options/insurance/optum-uhc/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/uhc-optum/ permanent;
+rewrite ^/meth-addiction-treatment/effects-of-use/?$ https://$host/meth-addiction-treatment/ permanent;
+rewrite ^/vicodin/?$ https://$host/prescription-opiates/vicodin/ permanent;
