--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,6 +35,12 @@ http {
         add_header X-XSS-Protection "1; mode=block";
         add_header Content-Security-Policy "default-src *; font-src 'self' data: fonts.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *; object-src 'none'; base-uri 'self';";
 
+        # proxy /wp-content/uploads/ -> s3 bucket
+        location ^~ /wp-content/uploads/ {
+            add_header Cache-Control "public, max-age=14400, must-revalidate";
+            proxy_pass https://s3-us-west-2.amazonaws.com/img-sunrisehouse-com/wp-content/uploads/;
+        }
+        
         # Media: images, icons, video, audio, HTC, 4 hours
         location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|webp|htc|woff|woff2)$ {
             add_header Cache-Control "public, max-age=14400, must-revalidate";
