--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -93,3 +93,5 @@ rewrite ^/programs/outpatient/?$ https://$host/addiction-treatment-new-jersey/le
 rewrite ^/addiction-treatment-new-jersey/payment-options/insurance/optum-uhc/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/uhc-optum/ permanent;
 rewrite ^/meth-addiction-treatment/effects-of-use/?$ https://$host/meth-addiction-treatment/ permanent;
 rewrite ^/vicodin/?$ https://$host/prescription-opiates/vicodin/ permanent;
+#FACILITY-7291
+rewrite ^/contributors/jim-zuravnsky/?$ https://$host/staff/ permanent;
