--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -95,3 +95,5 @@ rewrite ^/meth-addiction-treatment/effects-of-use/?$ https://$host/meth-addictio
 rewrite ^/vicodin/?$ https://$host/prescription-opiates/vicodin/ permanent;
 #FACILITY-7291
 rewrite ^/contributors/jim-zuravnsky/?$ https://$host/staff/ permanent;
+#FACILITY-7293
+rewrite ^/assessment-diagnose/?$ https://$host/co-occurring-disorders/ permanent;
