--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,7 +47,7 @@ http {
         }
         
         # Media: images, icons, video, audio, HTC, 4 hours
-        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|webp|htc|woff|woff2)$ {
+        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|svg|svgz|mp4|ogg|ogv|webm|webp|htc|woff|woff2)$ {
             add_header Cache-Control "public, max-age=14400, must-revalidate";
             root /var/app/current;
         }
