--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -122,3 +122,5 @@ rewrite ^/treating-schizophrenia-disorder/?$ https://$host/co-occurring-disorder
 rewrite ^/treating-schizophrenia-disorder/7-myths/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/compare-drug-induced-psychosis/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/signs/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
+rewrite ^/treat-co-occurring-disorders/signs-symptoms/?$ https://$host/co-occurring-disorders/treatment/ permanent;
+rewrite ^/mood-disorders/doctor-therapist-treat/?$ https://$host/co-occurring-disorders/treatment/ permanent;
