--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -124,3 +124,44 @@ rewrite ^/treating-schizophrenia-disorder/compare-drug-induced-psychosis/?$ http
 rewrite ^/treating-schizophrenia-disorder/signs/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treat-co-occurring-disorders/signs-symptoms/?$ https://$host/co-occurring-disorders/treatment/ permanent;
 rewrite ^/mood-disorders/doctor-therapist-treat/?$ https://$host/co-occurring-disorders/treatment/ permanent;
+#FACILITY-7295
+rewrite ^/depression/antidepressants/paroxetine/?$ https://$host/co-occurring-disorders/depression/antidepressants/paroxetine/ permanent;
+rewrite ^/assessment-diagnose/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
+rewrite ^/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
+rewrite ^/obsessive-compulsive-disorder/list-behaviors/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
+rewrite ^/obsessive-compulsive-disorder/treating-addiction/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
+rewrite ^/assessment-diagnose/create-addiction-recovery-plan/?$ https://$host/co-occurring-disorders/diagnosing/ permanent;
+rewrite ^/assessment-diagnose/mental-health-disorder/?$ https://$host/co-occurring-disorders/diagnosing/ permanent;
+rewrite ^/anxiety-disorder-treatment/generalized/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/assessment-diagnose/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/eating-disorders/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/mood-disorders/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/mood-disorders/6-stats/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/phobias/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/phobias/social-agoraphobia/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/phobias/treat-concurrent-substance-abuse/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/behavioral-process-addictions/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/causes/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/dual-diagnosis/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/obvious-signs/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/prevalent-mental-illnesses/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/obsessive-compulsive-disorder/comparing-behavior/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/comparing-behavior/ permanent;
+rewrite ^/assessment-diagnose/depression/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/depression/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/depression/bereavement-grief/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/depression/medicinal-holistic-treatment/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/depression/postpartum-treatment/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/depression/seasonal-affective-disorder/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/mood-disorders/depression-anxiety/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/assessment-diagnose/bipolar-disorder/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/bipolar-disorder/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/bipolar-disorder/cyclothymic/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/bipolar-disorder/rapid-cycling/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/bipolar-disorder/types/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/anxiety-disorder-treatment/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
+rewrite ^/anxiety-disorder-treatment/diagnose-social/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
+rewrite ^/anxiety-disorder-treatment/vs-panic/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
+rewrite ^/assessment-diagnose/anxiety-disorders/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
+rewrite ^/assessment-diagnose/list-tests-mental-health-conditions/?$ https://$host/co-occurring-disorders/diagnosing/list-tests-mental-health-conditions/ permanent;
+rewrite ^/assessment-diagnose/ptsd/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
