--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -115,8 +115,8 @@ rewrite ^/multiple-personality-disorder/tests-diagnose/?$ https://$host/co-occur
 rewrite ^/multiple-personality-disorder/treat-drug-abuse/?$ https://$host/co-occurring-disorders/dissociative-disorder/ permanent;
 rewrite ^/paranoia-disorders/?$ https://$host/co-occurring-disorders/paranoia-disorders/ permanent;
 rewrite ^/phobias/underlying-causes/?$ https://$host/co-occurring-disorders/paranoia-disorders/ permanent;
-rewrite ^/assessment-diagnose/drug-addiction/?$ https://$host/cause-effect/drug-addiction-abuse/ permanent;
-rewrite ^/assessment-diagnose/home-drug-test/?$ https://$host/cause-effect/drug-addiction-abuse/ permanent;
+rewrite ^/assessment-diagnose/drug-addiction/?$ https://$host/addiction-info/ permanent;
+rewrite ^/assessment-diagnose/home-drug-test/?$ https://$host/addiction-info/ permanent;
 rewrite ^/assessment-diagnose/schizophrenia/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/7-myths/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
@@ -168,3 +168,5 @@ rewrite ^/assessment-diagnose/ptsd/?$ https://$host/co-occurring-disorders/ptsd/
 #FACILITY-8966
 rewrite ^/contributors/daniel-mccormick/?$ https://$host/staff/ permanent;
 rewrite ^/cocaine-addiction-treatment/close-crack-cocaine/?$ https://$host/cocaine-addiction-treatment/ permanent;
+#FACILITY-10046
+rewrite ^/cause-effect/drug-addiction-abuse/?$ https://$host/addiction-info/ permanent;
