--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -22,7 +22,7 @@ rewrite ^/admissions/what-to-expect/families/?$ https://$host/addiction-treatmen
 rewrite ^/hippa-policy/?$ https://$host/hipaa-policy/ permanent;
 #FACILITY-1735
 rewrite ^/benzodiazepines/limbitrol/?$ https://$host/benzodiazepines/ permanent;
-rewrite ^/benzodiazepines/zolpidem-ambien/?$ https://$host/prescription-drug-addiction-recovery/zolpidem-ambien/ permanent;
+rewrite ^/benzodiazepines/zolpidem-ambien/?$ https://$host/addiction-info/ permanent;
 #FACILITY-2705
 rewrite ^/blog/$ https://$host/addiction-blog/ permanent;
 rewrite ^/addiction-blog/tag/$ https://$host/blog/tag/ permanent;
@@ -170,3 +170,66 @@ rewrite ^/contributors/daniel-mccormick/?$ https://$host/staff/ permanent;
 rewrite ^/cocaine-addiction-treatment/close-crack-cocaine/?$ https://$host/cocaine-addiction-treatment/ permanent;
 #FACILITY-10046
 rewrite ^/cause-effect/drug-addiction-abuse/?$ https://$host/addiction-info/ permanent;
+#FACILITY-9331
+rewrite ^/addiction-treatment-new-jersey/specialized-treatment/?$ https://$host/addiction-treatment-new-jersey/ permanent;
+rewrite ^/consulting-experts/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/case-manager/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/clinical-team/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/dietician-nutritionist/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/fitness-trainers/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/holistic-wellness-staff/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/life-coach/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/sober-escort-companion/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/consulting-experts/therapists-counselors/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/addiction-treatment/daily-schedule/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/determine-needs/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/drug-monitoring-system/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/employee-assistance-programs/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/exercise-program/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/men-vs-women/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/monthly-plan/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/nutrition-program/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/overall-phases/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/inpatient/ permanent;
+rewrite ^/addiction-treatment/pros-cons-inpatient-outpatient/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/role-doctors-therapists/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/telemedicine/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/wellness-program/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/capsules-tablets/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/half-life/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/list-benzodiazepines/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/opiates-benzodiazepines/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/process-approval/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/usa-canada/?$ https://$host/addiction-info/ permanent;
+rewrite ^/prescription-drug-addiction-recovery/zolpidem-ambien/?$ https://$host/addiction-info/ permanent;
+rewrite ^/research/case-decriminalization-drugs/?$ https://$host/research/ permanent;
+rewrite ^/research/curbing-online-sales-synthetic-herbal-drugs/?$ https://$host/research/ permanent;
+rewrite ^/research/dhs-nj-address-addiction/?$ https://$host/research/ permanent;
+rewrite ^/research/drug-related-deaths-new-jersey/?$ https://$host/research/ permanent;
+rewrite ^/research/drugs-legal-others-not/?$ https://$host/research/ permanent;
+rewrite ^/research/drug-trafficking-northeast/?$ https://$host/research/ permanent;
+rewrite ^/research/emergence-drug-courts/?$ https://$host/research/ permanent;
+rewrite ^/research/harm-reduction-syringe-access-programs/?$ https://$host/research/ permanent;
+rewrite ^/research/marijuana-legalization-new-jersey/?$ https://$host/research/ permanent;
+rewrite ^/research/microdosing-psychedelics/?$ https://$host/research/ permanent;
+rewrite ^/research/naloxone-new-jersey-combat-heroin-overdose/?$ https://$host/research/ permanent;
+rewrite ^/research/national-fight-opiate-addiction/?$ https://$host/research/ permanent;
+rewrite ^/research/new-jersey-treatment-industry/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/akorn/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/bristol-meyers-squibb/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/eli-lilly/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/glaxosmithkline/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/insys-therapeutics/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/johnson-johnson/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/lundbeck/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/organon/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/pharmacia/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/recordati/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/roche/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/shire-pharmaceuticals/?$ https://$host/research/ permanent;
+rewrite ^/research/pharmaceutical-industry/wyeth-ayerst-laboratories/?$ https://$host/research/ permanent;
+rewrite ^/research/prescription-drugs-expensive/?$ https://$host/research/ permanent;
+rewrite ^/research/prescription-painkillers-gateway-drug/?$ https://$host/research/ permanent;
+rewrite ^/research/pseudoscience-false-claims-addiction-treatment/?$ https://$host/research/ permanent;
+rewrite ^/research/public-perception-treatment/?$ https://$host/research/ permanent;
+rewrite ^/research/rates-drug-use-urban-suburban-rural/?$ https://$host/research/ permanent;
