--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -233,3 +233,7 @@ rewrite ^/research/prescription-painkillers-gateway-drug/?$ https://$host/resear
 rewrite ^/research/pseudoscience-false-claims-addiction-treatment/?$ https://$host/research/ permanent;
 rewrite ^/research/public-perception-treatment/?$ https://$host/research/ permanent;
 rewrite ^/research/rates-drug-use-urban-suburban-rural/?$ https://$host/research/ permanent;
+#FACILITY-10515
+rewrite ^/prepare-aftercare/rules-expectations-sober-living-program/?$ https://$host/addiction-treatment-new-jersey/aftercare/sober-living/rules-expectations/ permanent;
+rewrite ^/prepare-aftercare/roles-sponsor-sponsee/?$ https://$host/addiction-treatment-new-jersey/aftercare/roles-sponsor-sponsee/ permanent;
+rewrite ^/research/history-evolution-mental-health-treatment/?$ https://$host/addiction-treatment/history-evolution-mental-health-treatment/ permanent;
