--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -115,8 +115,6 @@ rewrite ^/multiple-personality-disorder/tests-diagnose/?$ https://$host/co-occur
 rewrite ^/multiple-personality-disorder/treat-drug-abuse/?$ https://$host/co-occurring-disorders/dissociative-disorder/ permanent;
 rewrite ^/paranoia-disorders/?$ https://$host/co-occurring-disorders/paranoia-disorders/ permanent;
 rewrite ^/phobias/underlying-causes/?$ https://$host/co-occurring-disorders/paranoia-disorders/ permanent;
-rewrite ^/assessment-diagnose/drug-addiction/?$ https://$host/addiction-info/ permanent;
-rewrite ^/assessment-diagnose/home-drug-test/?$ https://$host/addiction-info/ permanent;
 rewrite ^/assessment-diagnose/schizophrenia/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
 rewrite ^/treating-schizophrenia-disorder/7-myths/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
@@ -125,13 +123,10 @@ rewrite ^/treating-schizophrenia-disorder/signs/?$ https://$host/co-occurring-di
 rewrite ^/treat-co-occurring-disorders/signs-symptoms/?$ https://$host/co-occurring-disorders/treatment/ permanent;
 rewrite ^/mood-disorders/doctor-therapist-treat/?$ https://$host/co-occurring-disorders/treatment/ permanent;
 #FACILITY-7295
-rewrite ^/depression/antidepressants/paroxetine/?$ https://$host/co-occurring-disorders/depression/antidepressants/paroxetine/ permanent;
 rewrite ^/assessment-diagnose/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
 rewrite ^/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
 rewrite ^/obsessive-compulsive-disorder/list-behaviors/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
 rewrite ^/obsessive-compulsive-disorder/treating-addiction/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
-rewrite ^/assessment-diagnose/create-addiction-recovery-plan/?$ https://$host/co-occurring-disorders/diagnosing/ permanent;
-rewrite ^/assessment-diagnose/mental-health-disorder/?$ https://$host/co-occurring-disorders/diagnosing/ permanent;
 rewrite ^/anxiety-disorder-treatment/generalized/?$ https://$host/co-occurring-disorders/ permanent;
 rewrite ^/assessment-diagnose/?$ https://$host/co-occurring-disorders/ permanent;
 rewrite ^/eating-disorders/?$ https://$host/co-occurring-disorders/ permanent;
@@ -163,7 +158,6 @@ rewrite ^/anxiety-disorder-treatment/?$ https://$host/co-occurring-disorders/anx
 rewrite ^/anxiety-disorder-treatment/diagnose-social/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
 rewrite ^/anxiety-disorder-treatment/vs-panic/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
 rewrite ^/assessment-diagnose/anxiety-disorders/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
-rewrite ^/assessment-diagnose/list-tests-mental-health-conditions/?$ https://$host/co-occurring-disorders/diagnosing/list-tests-mental-health-conditions/ permanent;
 rewrite ^/assessment-diagnose/ptsd/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
 #FACILITY-8966
 rewrite ^/contributors/daniel-mccormick/?$ https://$host/staff/ permanent;
@@ -237,3 +231,34 @@ rewrite ^/research/rates-drug-use-urban-suburban-rural/?$ https://$host/research
 rewrite ^/prepare-aftercare/rules-expectations-sober-living-program/?$ https://$host/addiction-treatment-new-jersey/aftercare/sober-living/rules-expectations/ permanent;
 rewrite ^/prepare-aftercare/roles-sponsor-sponsee/?$ https://$host/addiction-treatment-new-jersey/aftercare/roles-sponsor-sponsee/ permanent;
 rewrite ^/research/history-evolution-mental-health-treatment/?$ https://$host/addiction-treatment/history-evolution-mental-health-treatment/ permanent;
+#FACILITY-9332
+rewrite ^/consulting-experts/clinic/?$ https://$host/ permanent;
+rewrite ^/herbal-/?$ https://$host/ permanent;
+rewrite ^/html/head/title/?$ https://$host/ permanent;
+rewrite ^/jkW/?$ https://$host/ permanent;
+rewrite ^/kpk/?$ https://$host/ permanent;
+rewrite ^/research/history-evolution-mental-health-treatme/?$ https://$host/ permanent;
+rewrite ^/addiction-treatment-new-jersey/levels-of-care/outpatient/?$ https://$host/addiction-treatment-new-jersey/levels-of-care/ permanent;
+rewrite ^/assessment-diagnose/drug-addiction/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/assessment-diagnose/home-drug-test/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/assessment-diagnose__trashed/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/assessment-diagnose/mental-health-disorder/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/treat-co-occurring-disorders/signs/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/assessment-diagnose/anxiety-disorders/?$ https://$host/co-occurring-disorders/anxiety/ permanent;
+rewrite ^/assessment-diagnose__trashed/bipolar-disorder/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/assessment-diagnose/bipolar-disorder/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/assessment-diagnose/bipolar-disorder-3/?$ https://$host/co-occurring-disorders/bipolar/ permanent;
+rewrite ^/assessment-diagnose__trashed/depression/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/depression__trashed/antidepressants__trashed/escitalopram/?$ https://$host/co-occurring-disorders/depression/antidepressants/ permanent;
+rewrite ^/depression/antidepressants__trashed/?$ https://$host/co-occurring-disorders/depression/antidepressants/ permanent;
+rewrite ^/depression/antidepressants__trashed/escitalopram/?$ https://$host/co-occurring-disorders/depression/antidepressants/ permanent;
+rewrite ^/depression/antidepressants/paroxetine/?$ https://$host/co-occurring-disorders/depression/antidepressants/ permanent;
+rewrite ^/assessment-diagnose__trashed/list-tests-mental-health-conditions/?$ https://$host/co-occurring-disorders/diagnosing/ permanent;
+rewrite ^/assessment-diagnose/list-tests-mental-health-conditions/?$ https://$host/co-occurring-disorders/diagnosing/ permanent;
+rewrite ^/assessment-diagnose/obsessive-compulsive-disorder/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
+rewrite ^/assessment-diagnose__trashed/ptsd/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
+rewrite ^/assessment-diagnose/schizophrenia/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
+rewrite ^/assessment-diagnose/create-addiction-recovery-plan/?$ https://$host/co-occurring-disorders/treatment/ permanent;
+rewrite ^/stop-drinking-alcohol/history-beer/8/5/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/stop-drinking-alcohol/history-beer/9/5/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/stop-drinking-alcohol/percentage/?$ https://$host/stop-drinking-alcohol/ permanent;
